--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", intial-scale="1.0">
-    <title>Homepage - Techium</title>
+    <meta name="viewport" width="device-width" initial-scale="1" viewport-fit="cover">
+    <title> Homepage - Techium </title>
     <meta name="description" content="Techium is a digital agency">
-    <link rel="icon" type="image/x-icon" href="">
-    <link rel="icon" type="image/png" href="">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="icon" type="images/X-icon" href="./favicon.ico">
+    <link rel="icon" type="images/png" href="./favicon.png">
 </head>
 <body>
     
