--- a/0x00-html_advanced/6-index.html
+++ b/0x00-html_advanced/6-index.html
@@ -1,58 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", intial-scale="1.0">
-    <title>Homepage - Techium</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <title> Homepage - Techium </title>
     <meta name="description" content="Techium is a digital agency">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="icon" type="image/png" href="./favicon.png">
+    <link rel="icon" type="images/x-icon" href="./favicon.ico">
+    <link rel="icon" type="images/png" href="./favicon.png">
 </head>
 <body>
-    <header>
-        Header
-    </header>
+    <header>Header</header>
     <main>
-        <!-- first section starts here -->
-        <section class="one">
-            Hero section
-        </section>
-        <!-- second section starts here -->
-        <section class="two">
-            Services section
-        </section>
-        <!-- third section starts here -->
-        <section class="three">
-            Works section
+        <section>Hero section</section>
+        <section>Services section</section>
+        <section>Works section
             <article>Work 1</article>
             <article>Work 2</article>
             <article>Work 3</article>
         </section>
-        <!-- fourth section starts here -->
-        <section class="four">
-            About section
-        </section>
-        <!-- fifth section starts here -->
-        <section class="five">
-            Latest news section
+        <section>About section</section>
+        <section>Latest news section
             <article>Article 1</article>
-            <article>Article 1</article>
-            <article>Article 1</article>
+            <article>Article 2</article>
+            <article>Article 3</article>
         </section>
-        <!-- sixth section starts here -->
-        <section class="six">
-            Testimonials section
-            <article>Testimonial 1</article>
-            <article>Testimonial 2</article>
-            <article>Testimonial 3</article>
+        <section>Testimonials section
+            <section>Testimonial 1</section>
+            <section>Testimonial 2</section>
+            <section>Testimonial 3</section>
         </section>
-        <!-- seventh section starts here -->
-        <section class="seven">
-            Contact section
-        </section>
+        <section>Contact section</section>
     </main>
-    <footer>
-        Footer
-    </footer>
+    <footer>Footer</footer>
 </body>
 </html>
