--- a/0x00-html_advanced/6-index.html
+++ b/0x00-html_advanced/6-index.html
@@ -25,9 +25,9 @@
             <article>Article 3</article>
         </section>
         <section>Testimonials section
-            <section>Testimonial 1</section>
-            <section>Testimonial 2</section>
-            <section>Testimonial 3</section>
+            <article>Testimonial 1</article>
+            <article>Testimonial 2</article>
+            <article>Testimonial 3</article>
         </section>
         <section>Contact section</section>
     </main>
