--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <header>
-        <div>
-            <span>Techium</span>
-            <nav></nav>
+        <div>    
+            <div>
+                <span>Techium</span>
+                <nav></nav>
+            </div>
         </div>
     </header>
     <main>
@@ -113,7 +115,9 @@
     </main>
     <footer>
         <div>
-            Footer
+            <div>
+                Footer
+            </div>
         </div>
     </footer>
 </body>
