--- a/0x00-html_advanced/26-styleguide.html
+++ b/0x00-html_advanced/26-styleguide.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", intial-scale="1.0">
-    <title>Homepage - Techium</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <title> Styleguide - Techium </title>
     <meta name="description" content="Techium is a digital agency">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="icon" type="image/png" href="./favicon.png">
+    <link rel="icon" type="images/x-icon" href="./favicon.ico">
+    <link rel="icon" type="images/png" href="./favicon.png">
 </head>
 <body>
-    <header>
-        
-    </header>
+    <header></header>
     <main>
         <section>
             <header>
@@ -20,7 +18,7 @@
             <h1>Heading level 1</h1>
             <h2>Heading level 2</h2>
             <h3>Heading level 3</h3>
-                <h4>Heading level 4</h4>
+            <h4>Heading level 4</h4>
             <h5>Heading level 5</h5>
             <h6>Heading level 6</h6>
         </section>
@@ -30,8 +28,10 @@
             </header>
             <h2>Heading with a subtitle</h2>
             <p>This is my subtitle</p>
-            <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. 
-                Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+            <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi 
+                integer non faucibus ornare mi ut ante amet placerat aliquet.
+                Volutpat eu sed ante lacinia sapien lorem accumsan varius
+                montes viverra nibh in adipiscing blandit tempus accumsan.</p>
         </section>
         <br>
         <!-- Lists -->
@@ -44,7 +44,7 @@
                 <ul>
                     <li>Dolor pulvinar etiam magna etiam.</li>
                     <li>Sagittis adipiscing lorem eleifend.</li>
-                    <li>enim feugiat dolore viverra.</li>
+                    <li>Felis enim feugiat dolore viverra.</li>
                 </ul>
                 <h3>Ordered</h3>
                 <ol>
@@ -57,19 +57,15 @@
                     <dt>Definition List title</dt>
                     <dd>Definition text.</dd>
                     <dt>Startup</dt>
-                    <dd>A startup company or startup is a company or 
-                        temporary organization designed to search for a 
-                        repeatable and scalable business model.</dd>
+                    <dd>A startup company or startup is a company or temporary organization designed to
+                        search for a repeatable and scalable business model.</dd>
                     <dt>Water</dt>
-                    <dd>A colorless, transparent, odorless liquid that forms the seas, 
-                        lakes, rivers, and rain and is the basis of the fluids of 
-                        living organisms.</dd>
+                    <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers,
+                        and rain and is the basis of the fluids of living organisms.</dd>
                 </dl>
             </div>
         </section>
     </main>
-    <footer>
-        
-    </footer>
+    <footer></footer>
 </body>
 </html>
