--- a/0x00-html_advanced/23-index.html
+++ b/0x00-html_advanced/23-index.html
@@ -114,19 +114,19 @@
             <section>
                 <div>
                     <header>
-                        <a href="#"> <h2>Latest news</h2> </a>
+                        <h2>Latest news</h2>
                     </header>
                     <div>
                         <article>
                             <p>Career</p>
-                            Article 1
+                            <a href="#"><h3>Hoc loco tenere se Triarius non potuit.</h3></a>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                 Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?
                             </p>
                         </article>
                         <article>
                             <p>Digital Life</p>
-                            Article 2
+                            <a href="#"><h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3></a>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso:
                                 Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit.
                                 Nos commodius agimus. An nisi populari fama?
@@ -134,7 +134,7 @@
                         </article>
                         <article>
                             <p>Social</p>
-                            Article 3
+                            <a href="#"><h3>Bestiarum vero nullum iudicium puto.</h3></a>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene.
                                 Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis.
                                 Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.
